[package]
name = "traffic-billing"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
traffic-billing-common = { path = "../traffic-billing-common", features=["user"] }
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
anyhow = "1.0.42"
dashmap = "5.4.0"
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
simplelog = "0.12"
bytes = "1"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
hyper = { version = "0.14", features = ["full"] }
prometheus= "0.13.1"
lazy_static = "1.4.0"
futures = "0.3.21"
kube = { version = "0.74.0", default-features = false, features = ["client", "rustls-tls","derive",
    "runtime"] }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"


[[bin]]
name = "traffic-billing"
path = "src/main.rs"
